Add styles to projects page

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
-    <title>Nollywood Database</title>
+    <title>Cocoa-Cacoo</title>
     <link href="/favicon.ico" rel="shortcut icon" />
     <meta content="width=device-width, initial-scale=1" name="viewport">
   </head>
